Moving files around to keep things tidy

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     </div>
     <div id='output'></div>
 
-    <script src="functions.js"></script>
-    <script src="ajax.js"></script>
-    <script src="images.js"></script>
-    <script src="output.js"></script>
-    <script src="tiles.js"></script>
-    <script src="entities.js"></script>
-    <script src="map.js"></script>
+    <script src="source/io/ajax.js"></script>
+    <script src="source/io/window_events.js"></script>
+    <script src="source/io/output.js"></script>
+    <script src="source/functions.js"></script>
+    <script src="source/images.js"></script>
+    <script src="source/tiles.js"></script>
+    <script src="source/entities/entities.js"></script>
+    <script src="source/map.js"></script>
 
-    <script src="game.js"></script>
-    <script src="loading.js"></script>
-    <script src="window_events.js"></script>
+    <script src="source/game.js"></script>
+    <script src="source/loading.js"></script>
 
-    <script src="main.js"></script>
+    <script src="source/main.js"></script>
   </body>
 </html>
