--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="source/entities/entities.js"></script>
     <script src="source/map.js"></script>
 
+    <script src="source/pathfinding.js"></script>
+
     <script src="source/game.js"></script>
     <script src="source/loading.js"></script>
 
