--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>HTML 5 Test Game</title>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
-  <body>
+ <body>
+  <div id="globalheader"><a href="http://grickit.github.com">&nbsp;&lt; Back to grickit.github.com</a> <a href="http://github.com/grickit/notpokemon">&nbsp;&lt; Source code</a></div>
+
     <div id="window">
       <div id="menu_main"></div>
       <div id="menu_context"></div>
