Add grickit.github.com's analytics code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>HTML 5 Test Game</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <script type="text/javascript" src="analytics.js"></script>
   </head>
  <body>
   <div id="globalheader"><a href="http://grickit.github.com">&nbsp;&lt; Back to grickit.github.com</a> <a href="http://github.com/grickit/notpokemon">&nbsp;&lt; Source code</a></div>
