--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>HTML 5 Test Game</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="../globalheader.css" type="text/css">
     <script type="text/javascript" src="analytics.js"></script>
   </head>
  <body>
