If the player is in range, plot a path to them. When that path runs out, walk around randomly.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <script src="source/functions.js"></script>
     <script src="source/images.js"></script>
     <script src="source/tiles.js"></script>
+
     <script src="source/entities/entities.js"></script>
+    <script src="source/entities/character.js"></script>
     <script src="source/map.js"></script>
 
     <script src="source/pathfinding.js"></script>
