Add a stats window

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div id="globalheader"><a href="http://grickit.github.com">&nbsp;&lt; Back to grickit.github.com</a> <a href="http://github.com/grickit/notpokemon">&nbsp;&lt; Source code</a></div>
 
     <div id="window">
+      <div id="stats"></div>
       <canvas id='map' width="272" height="208"></canvas>
       <div id="menu_main"></div>
       <div id="menu_context"></div>
