--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
     <script src="source/functions.js"></script>
     <script src="source/images.js"></script>
     <script src="source/tiles.js"></script>
-
     <script src="source/entities/entities.js"></script>
     <script src="source/entities/character.js"></script>
     <script src="source/map.js"></script>
-
     <script src="source/pathfinding.js"></script>
-
     <script src="source/game.js"></script>
     <script src="source/loading.js"></script>
+
+    <script src="data/basetileset.js"></script>
 
     <script src="source/main.js"></script>
   </body>
