--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="source/io/output.js"></script>
     <script src="source/functions.js"></script>
     <script src="source/images.js"></script>
+    <script src="source/data.js"></script>
     <script src="source/tiles.js"></script>
     <script src="source/entities/entities.js"></script>
     <script src="source/entities/character.js"></script>
@@ -28,8 +29,6 @@
     <script src="source/pathfinding.js"></script>
     <script src="source/game.js"></script>
     <script src="source/loading.js"></script>
-
-    <script src="data/basetileset.js"></script>
 
     <script src="source/main.js"></script>
   </body>
