--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="source/map.js"></script>
     <script type="text/javascript" src="source/tiles.js"></script>
     <script type="text/javascript" src="source/functions.js"></script>
+    <script type="text/javascript" src="source/entity.js"></script>
 
     <script type="text/javascript" src="source/game.js"></script>
     <script type="text/javascript" src="source/main.js"></script>
