--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <script type="text/javascript" src="source/outputBox.js"></script>
     <script type="text/javascript" src="source/window_events.js"></script>
-    <script type="text/javascript" src="source/images.js"></script>
+    <script type="text/javascript" src="source/ImageManager.js"></script>
+    <script type="text/javascript" src="source/sprite.js"></script>
+    <script type="text/javascript" src="source/animation.js"></script>
     <script type="text/javascript" src="source/map.js"></script>
     <script type="text/javascript" src="source/tiles.js"></script>
     <script type="text/javascript" src="source/functions.js"></script>
