Fancy new callback() class.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="source/ImageManager.js"></script>
     <script type="text/javascript" src="source/sprite.js"></script>
     <script type="text/javascript" src="source/animation.js"></script>
+    <script type="text/javascript" src="source/callback.js"></script>
     <script type="text/javascript" src="source/map.js"></script>
     <script type="text/javascript" src="source/tiles.js"></script>
     <script type="text/javascript" src="source/functions.js"></script>
