Wire in the new entity classes.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <script type="text/javascript" src="source/map.js"></script>
     <script type="text/javascript" src="source/tiles.js"></script>
     <script type="text/javascript" src="source/functions.js"></script>
-    <script type="text/javascript" src="source/entity.js"></script>
+    <script type="text/javascript" src="source/Entity.js"></script>
+    <script type="text/javascript" src="source/EntityLiving.js"></script>
 
     <script type="text/javascript" src="source/game.js"></script>
     <script type="text/javascript" src="source/main.js"></script>
