Cleaning up some stuff.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <script type="text/javascript" src="source/outputBox.js"></script>
     <script type="text/javascript" src="source/window_events.js"></script>
     <script type="text/javascript" src="source/ImageManager.js"></script>
-    <script type="text/javascript" src="source/sprite.js"></script>
-    <script type="text/javascript" src="source/animation.js"></script>
+    <script type="text/javascript" src="source/Sprite.js"></script>
+    <script type="text/javascript" src="source/Animation.js"></script>
     <script type="text/javascript" src="source/callback.js"></script>
     <script type="text/javascript" src="source/map.js"></script>
     <script type="text/javascript" src="source/tiles.js"></script>
