--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="source/ImageManager.js"></script>
     <script type="text/javascript" src="source/Sprite.js"></script>
     <script type="text/javascript" src="source/Animation.js"></script>
-    <script type="text/javascript" src="source/callback.js"></script>
+    <script type="text/javascript" src="source/Callback.js"></script>
     <script type="text/javascript" src="source/map.js"></script>
     <script type="text/javascript" src="source/tiles.js"></script>
     <script type="text/javascript" src="source/functions.js"></script>
