Wire in the new EntityTrigger() class.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="source/functions.js"></script>
     <script type="text/javascript" src="source/Entity.js"></script>
     <script type="text/javascript" src="source/EntityLiving.js"></script>
+    <script type="text/javascript" src="source/EntityTrigger.js"></script>
 
     <script type="text/javascript" src="source/game.js"></script>
     <script type="text/javascript" src="source/main.js"></script>
