--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id='terminal'></div>
 
-    <script type="text/javascript" src="source/outputBox.js"></script>
+    <script type="text/javascript" src="source/OutputBox.js"></script>
     <script type="text/javascript" src="source/window_events.js"></script>
     <script type="text/javascript" src="source/ImageManager.js"></script>
     <script type="text/javascript" src="source/Sprite.js"></script>
