Groundwork for a real editor. Hoo boy. I have a long road ahead to get back to where I was.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <script type="text/javascript" src="source/Entity.js"></script>
     <script type="text/javascript" src="source/EntityLiving.js"></script>
     <script type="text/javascript" src="source/EntityTrigger.js"></script>
+    <script type="text/javascript" src="source/Map.js"></script>
+    <script type="text/javascript" src="source/TileSet.js"></script>
+    <script type="text/javascript" src="source/TileType.js"></script>
 
     <script type="text/javascript" src="source/game.js"></script>
     <script type="text/javascript" src="source/main.js"></script>
