--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="source/Entity.js"></script>
     <script type="text/javascript" src="source/EntityLiving.js"></script>
     <script type="text/javascript" src="source/EntityTrigger.js"></script>
+    <script type="text/javascript" src="source/EntityOverlay.js"></script>
     <script type="text/javascript" src="source/Map.js"></script>
     <script type="text/javascript" src="source/TileSet.js"></script>
     <script type="text/javascript" src="source/TileType.js"></script>
