Implement the WindowType class

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <script type="text/javascript" src="analytics.js"></script>
     <script type="text/javascript">
       function injectCode() {
-	code = document.getElementById('stdin').value;
-	eval(code);
-	document.getElementById('stdin').value = '';
+        code = document.getElementById('stdin').value;
+        eval(code);
+        document.getElementById('stdin').value = '';
       }
     </script>
   </head>
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="source/Map.js"></script>
     <script type="text/javascript" src="source/TileSet.js"></script>
     <script type="text/javascript" src="source/TileType.js"></script>
+    <script type="text/javascript" src="source/WindowType.js"></script>
 
     <script type="text/javascript" src="source/game.js"></script>
     <script type="text/javascript" src="source/main.js"></script>
