Windows are finally resizable due to popular demand.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
   <head>
     <title>HTML 5 Test Game</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="stylesheet" href="../globalheader.css" type="text/css">
     <script type="text/javascript" src="analytics.js"></script>
     <script type="text/javascript">
       function injectCode() {
@@ -14,16 +13,7 @@
   </head>
  <body>
   <div id="globalheader"><a href="http://grickit.github.com">&nbsp;&lt; Back to grickit.github.com</a> <a href="http://github.com/grickit/notpokemon">&nbsp;&lt; Source code</a></div>
-
-    <div id="window">
-      <div id="menu_side"></div>
-      <canvas id="map" width="272" height="208"></canvas>
-      <div id="menu_main"></div>
-      <div id="menu_context"></div>
-    </div>
-    <div id="stdout"></div>
-    <textarea id="stdin"></textarea><br>
-    <input type="Submit" onclick="injectCode()">
+  <canvas id="map"></canvas>
 
     <script type="text/javascript" src="source/OutputBox.js"></script>
     <script type="text/javascript" src="source/window_events.js"></script>
@@ -40,7 +30,6 @@
     <script type="text/javascript" src="source/TileSet.js"></script>
     <script type="text/javascript" src="source/TileType.js"></script>
     <script type="text/javascript" src="source/WindowType.js"></script>
-
     <script type="text/javascript" src="source/game.js"></script>
     <script type="text/javascript" src="source/main.js"></script>
   </body>
