Super rudimentary courser entity. Closes issue #5.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="source/functions.js"></script>
     <script type="text/javascript" src="source/Entity.js"></script>
     <script type="text/javascript" src="source/EntityLiving.js"></script>
+    <script type="text/javascript" src="source/EntityCursor.js"></script>
     <script type="text/javascript" src="source/EntityTrigger.js"></script>
     <script type="text/javascript" src="source/Map.js"></script>
     <script type="text/javascript" src="source/TileSet.js"></script>
